# nemusic

./: .clang-tidy  .gitmodules  CMakeLists.txt  READNE.md
src/: CMakeLists.txt  main.c  main.cpp
src/asio_utils/: CMakeLists.txt  asio_utils.cpp
src/curl_utils/: CMakeLists.txt  curl_utils.c
src/include/asio_utils/: asio_utils.h
src/include/css/: tab.h
src/include/curl_utils/: curl_utils.h
src/include/music_core/: music_core.h
src/include/ne-gtk/: tab_detail.h  window.h
src/include/services/: netmusic.h
src/music_core/: CMakeLists.txt  music_core.c  music_core.cpp
src/ne-gtk/: CMakeLists.txt  main_window.c  main_window.cpp  song_detail.cpp  tab_detail.c  tab_detail.cpp
src/services/: CMakeLists.txt  netmusic.c  netmusic.cpp
